--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "fast-average-color": "^9.4.0",
     "node-vibrant": "^4.0.3",
     "prisma": "^6.4.1",
     "sqlite3": "^5.1.7"
